[package]
name = "zynq-ultrascale-plus-modules"
version = "0.1.0"
edition = "2021"

[features]
default = []
gic400 = []
zdma = []
afifm = []
ams = []
plsysmon = []
pssysmon = []
apm = []
apmddr = []
apu = []
axipcie-dma = []
axipcie-egress = []
axipcie-ingress = []
axipcie-main = []
bbram = []
can = []
cci400 = []
cci-reg = []
a53-cti-0 = []
a53-cti-1 = []
a53-cti-2 = []
a53-cti-3 = []
a53-dbg-0 = []
a53-dbg-1 = []
a53-dbg-2 = []
a53-dbg-3 = []
a53-etm-0 = []
a53-etm-1 = []
a53-etm-2 = []
a53-etm-3 = []
a53-pmu-0 = []
a53-pmu-1 = []
a53-pmu-2 = []
a53-pmu-3 = []
a53-rom = []
cti = []
r5-dbg-0 = []
r5-dbg-1 = []
r5-etm-0 = []
r5-etm-1 = []
r5-rom = []
etf4k = []
etf8k = []
etr = []
ftm = []
funnel3p = []
funnel4p = []
replic = []
daprom = []
stm = []
tpiu = []
tsgen = []
crf-apb = []
crl-apb = []
csu = []
csudma = []
swdt = []
ddrc = []
ddr-phy = []
ddr-qos-ctrl = []
xmpu-ddr = []
display-port = []
dpdma = []
efuse = []
fpd-gpv = []
fpd-slcr = []
fpd-slcr-secure = []
xmpu-fpd = []
xmpu-sink = []
gem = []
gpio = []
gpu = []
i2c = []
iou-gpv = []
iou-scntr = []
iou-scntrs = []
iou-secure-slcr = []
iou-slcr = []
ipi = []
lpd-gpv = []
lpd-slcr = []
lpd-slcr-secure = []
xppu = []
xppu-sink = []
nand = []
ocm = []
xmpu-ocm = []
pcie-attrib = []
pmu-global = []
pmu-iomodule = []
pmu-lmb-bram = []
pmu-local = []
qspi = []
pl390 = []
rpu = []
rsa = []
rsa-core = []
rtc = []
sata-ahci-hba = []
sata-ahci-portcntrl = []
sata-ahci-vendor = []
sdio = []
serdes = []
siou = []
smmu500 = []
smmu-reg = []
spi = []
ttc = []
uart = []
usb3-regs = []
usb3-xhci = []
vcu-dec-top = []
vcu-enc-top = []
vcu-slcr = []

[dependencies]
tock-registers = "0.8.0"